# Repo-BD2-G02

./: README.md
Proyectos/P1/: docker-compose.yml
Proyectos/P1/Progra1/: README.md  docker-compose.yml
Proyectos/P1/Progra1/backend/: requirements.txt
Proyectos/P1/Progra1/backend/app/: db.py  main.py
Proyectos/P1/Progra1/backend/app/models/: models.py
Proyectos/P1/Progra1/backend/app/routes/: auth_routes.py  survey_routes.py  user_routes.py
Quices/Quiz2/02 - MongoDB/: datos_reales.jsonl  query_mongo.ipynb  test_mongo.ipynb
Tareas/TC01/: TC01-Endpoints.postman_collection.json
Tareas/TC01/python-flask-restapi/: Dockerfile  README.md  app.py  app_service.py  db.py  db_copy.py  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  test_endpoints.py
Tareas/TC01/python-flask-restapi/database/: 00-init.sql  01-tasks.sql  02-usuarios.sql
Tareas/TC02/kafka/: Dockerfile  README.md  app.py  app_service.py  consumerProducer.py  db.py  docker-compose.yml  init-topics.sh  pyproject.toml
Tareas/TC02/kafka/consumer/: consumer.py  dockerfile
